infra/k8s/dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: madness.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 9005
          - path: /products/?(.*)
            backend:
              serviceName: products-srv
              servicePort: 80
          - path: /stock/?(.*)
            backend:
              serviceName: stock-srv
              servicePort: 3000
